# Project-Aegis-CLI-MVP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-2.0.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-to-pypi.yml  python-ci.yml
Packaging/: pyproject.toml
security/: SECURITY.md
src/aegis_cli/: checker.py  cli.py  generator.py  hooks.py  pre-commit.sh.j2
src/aegis_cli/detectors/: __init__.py  base_detector.py  java_detector.py  javascript_detector.py  python_detector.py  rust_detector.py
src/aegis_cli/generators/: __init__.py  dependabot_yml.py  helpers.py  secure_coding_guide.py  security_md.py
src/aegis_cli/templates/: SECURITY.md.j2  dependabot.yml.j2
src/praximous_aegis_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/templates/: SecureCodingGuide.md.j2  dependabot.yml.j2
test-js/.github/: dependabot.yml
test-js/security/: SECURITY.md  SecureCodingGuide.md
test-python/.github/: dependabot.yml
test-python/security/: SECURITY.md  SecureCodingGuide.md
test-ship-project/security/: SECURITY.md
tests/: conftest.py  test_cli.py  test_cli_check.py  test_cli_hooks.py
tests/detectors/: SecureCodingGuide.md.j2  test_base_detector.py  test_detection_integration.py  test_javascript_detector.py  test_python_detector.py
tests/generators/: test_dependabot_yml.py  test_generation_integration.py  test_helpers.py  test_secure_coding_guide.py  test_security_md.py
