[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praximous-aegis-cli"
version = "0.1.0"
description = "Automate security documentation for your projects"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "JamesTheGiblet" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["security", "documentation", "automation", "cli", "devsecops"]

[project.urls]
Homepage = "https://github.com/JamesTheGiblet/Project-Aegis-CLI"
Repository = "https://github.com/JamesTheGiblet/Project-Aegis-CLI"
Issues = "https://github.com/JamesTheGiblet/Project-Aegis-CLI/issues"


dependencies = [
    "click>=8.0.0",
    "Jinja2>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.setuptools.package-data]
aegis_cli = ["templates/*.j2"]

[project.scripts]
aegis = "aegis_cli.cli:cli"