[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praximous-aegis-cli"
version = "0.1.0"
description = "Automate security documentation for your projects"
readme = "README.md"
authors = [{ name = "JamesTheGiblet", email = "your@email.com" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "click>=8.0.0",
    "Jinja2>=3.0.0",
]

[project.scripts]
aegis = "aegis_cli.cli:cli"